# unity-test-parser

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  azure-pipelines.yml  setup.py  test_requirements.txt  unity_test_parser.py
tests/: approvaltests_config.json  test_input.py  test_junit.py
tests/approvals/: TestJUnitOutput.test_junit_from_unity_fixture.approved.txt  TestJUnitOutput.test_junit_from_unity_normal.approved.txt
tests/produce_unity_output/: CMakeLists.txt  normal_unity_test_output.c  unity_config.h  unity_fixture_test_output.c  unity_fixture_verbose.txt  unity_normal.txt
